# realsense-ros

realsense2_camera/: CMakeLists.txt  package.xml
realsense2_camera/src/: base_realsense_node.cpp
