<?xml version="1.0"?>
<package format="2">
  <name>realsense2_camera</name>
  <version>1.0.0</version>
  <description>A Filics Adaptation of the RealSense2 Camera Package</description>
  <maintainer email="bojadzic@filics.eu">Dmair Bojadžić</maintainer>
  <license>Apache 2.0</license>
  
  <url type="website">http://www.ros.org/wiki/RealSense</url>
  <url type="bugtracker">https://github.com/intel-ros/realsense/issues</url>

  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>eigen</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>  
  <depend>genmsg</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_runtime</depend>
  <depend>tf</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <depend>librealsense2</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
